--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 /* Top Header Bar */
 .top-bar {
-    background-color: #38A0B3;
+    background-color: #ffffff;
     color: white;
     padding: 15px;
     display: flex;
@@ -116,7 +116,7 @@ body {
 }
 
 .bottom-nav-item img {
-    width: 25px;
+    width: 20px; /* Set a specific width for the icons */
     margin-bottom: 5px;
 }
 
@@ -134,7 +134,7 @@ body {
 
 /* Top Header Bar */
 .top-bar {
-    background-color: #38A0B3;
+    background-color: #ffffff;
     color: white;
     padding: 15px;
     display: flex;
@@ -176,7 +176,7 @@ body {
 
 .menu-item {
     flex: 1 1 calc(50% - 15px); /* Two items per row for the first row */
-    background-color: #E6F7FF;
+    background-color: #fafafa;
     text-align: center;
     padding: 20px;
     border-radius: 10px;
@@ -243,6 +243,6 @@ body {
 }
 
 .bottom-nav-item img {
-    width: 25px;
+    width: 5px; /* Set a specific width for the icons */
     margin-bottom: 5px;
 }
