--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
     display: flex; /* Use flexbox for better responsiveness */
     flex-wrap: wrap; /* Allow wrapping to the next line */
     justify-content: space-between; /* Space items evenly */
-    padding: 20px;
+   
 }
 
 .menu-item {
@@ -56,7 +56,7 @@ body {
     background-color: #E6F7FF;
     text-align: center;
     padding: 20px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     font-size: 16px; /* Increase font size for better visibility */
     transition: transform 0.2s; /* Add transition for hover effect */
@@ -170,27 +170,30 @@ body {
 .grid-menu {
     display: flex;
     flex-wrap: wrap; /* Allow wrapping to the next line */
-    gap: 15px;
-    padding: 20px;
+    /* gap: 15px; */
+    padding: 0px;
 }
 
 .menu-item {
     flex: 1 1 calc(50% - 15px); /* Two items per row for the first row */
     background-color: #fafafa;
     text-align: center;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 5px;
+    /* border-radius: 10px; */
+    /* box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); */
     font-size: 14px;
-    transition: transform 0.2s; /* Add transition for hover effect */
+
 }
 
+/* 
 .menu-item:hover {
-    transform: scale(1.05); /* Slightly enlarge on hover */
-}
+    transform: scale(1.05); 
+} */
+
+
 
 .menu-item img {
-    width: 50px; /* Increase icon size */
+    width: 100px; /* Increase icon size */
     margin-bottom: 10px;
 }
 
@@ -235,6 +238,9 @@ body {
     justify-content: space-around;
     padding: 10px 0;
     box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+    
+    
+    
 }
 
 .bottom-nav-item {
